<resources>
    <string name="app_name">MiniAccount</string>
    <string name="MiniAccount">记账本</string>
    <string name="UserName">用户昵称:</string>
    <string name="Password">密码:</string>
    <string name="Login">登陆</string>
    <string name="ForgetPassword">忘记密码</string>
    <string name="RegisterUser">注册用户</string>
    <string name="ConfirmPassword">确认密码:</string>
    <string name="PasswordMessage">密码提示:</string>
    <string name="SplashMessage">不积跬步,无以至千里;不积小流,无以成江海;</string>
    <string name="Enter">进入</string>
    <string name="HelpMessage">帮助信息</string>
    <string name="First">第一章</string>
    <string name="Second">第二章</string>
    <string name="Third">第三章</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="gallery">设置</string>
    <string name="share">分享</string>
    <string name="send">报告</string>
    <string name="help">帮助</string>
    <string name="about">关于</string>

    <string name="summary">概要</string>
    <string name="income">收入</string>
    <string name="outlay">支出</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="category">类别</string>
    <string name="remark">备注</string>
</resources>